--- a/DockerFile
+++ b/DockerFile
@@ -1,8 +1,8 @@
 # Container image that runs your code
 FROM alpine:3.10
-
+RUN	apk add bash ca-certificates curl jq
 # Copies your code file from your action repository to the filesystem path `/` of the container
-COPY entrypoint.sh /entrypoint.sh
+COPY entrypoint.sh /usr/bin/entrypoint.sh
 
 # Code file to execute when the docker container starts up (`entrypoint.sh`)
-ENTRYPOINT ["/entrypoint.sh"]
+ENTRYPOINT ["entrypoint.sh"]
