feat: add condition on shell script

--- a/action.yml
+++ b/action.yml
@@ -1,14 +1,11 @@
-on: push
-name: Fast prototype
-jobs:
-  createPR:
-    name: Create PR Automation
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@master
-      - name: Create PR
-        uses: .
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          args: .head_commit.message
+name: "PR Auto Generation"
+description: "automatically generate pr when certain string existed"
+
+inputs:
+  commit-message:
+    description: "entered commit message"
+    required: true
+
+runs:
+  using: "docker"
+  image: "Dockerfile"
